<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_filled_24"/>
    <item
        android:id="@+id/fragment_shorts"
        android:title="@string/shorts"
        android:icon="@drawable/shorts_icon"/>
    <item
        android:id="@+id/fragment_live"
        android:title="@string/live"
        android:icon="@drawable/live_icon"/>
    <item
        android:id="@+id/fragment_search"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_24"/>
    <item
        android:id="@+id/fragment_history"
        android:title="@string/history"
        android:icon="@drawable/history_icon"/>
</menu>